--- a/contact.html
+++ b/contact.html
@@ -207,9 +207,9 @@
             </div>
           </div>
           <div class="img-box b-2">
-            <img src="images/p4.jpg" alt="">
+            <img src="images/Web_Uts.PNG" alt="">
             <div class="btn-box">
-              <a href="" class="btn-1">
+              <a href="https://myletarman.github.io/utspemrogramanweb/" class="btn-1">
                 <i class="fa fa-share-alt" aria-hidden="true"></i>
               </a>
             </div>
@@ -237,9 +237,9 @@
             </div>
           </div>
           <div class="img-box b-2">
-            <img src="images/p5.jpg" alt="">
+            <img src="images/TugasKelompok.PNG" alt="">
             <div class="btn-box">
-              <a href="" class="btn-1">
+              <a href="https://dua.unpam.tech/" class="btn-1">
                 <i class="fa fa-share-alt" aria-hidden="true"></i>
               </a>
             </div>
